Fix missing color on dark mode

--- a/frontend/components/layout/GridNavItem/styles.module.css
+++ b/frontend/components/layout/GridNavItem/styles.module.css
@@ -11,6 +11,7 @@
 	padding: var(--size-spacing-30) var(--size-spacing-20);
 	border: 1px solid var(--color-system-border-100);
 	width: 100%;
+	color: var(--color-system-text-100);
 }
 
 .container:hover {
@@ -53,6 +54,7 @@
 	font-size: var(--font-size-subtitle);
 	font-weight: var(--font-weight-subtitle);
 	line-height: 1.1;
+	color: var(--color-system-text-100);
 }
 
 /* * */
